--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,9 +20,9 @@ canvas {
   flex-direction: column;
   align-items: center;
   position: fixed;
-  top: 72px;
+  top: 118px;
   background-color: rgba(147, 193, 252, 0.7);
-  padding: 8px;
+  padding: 15px 8px;
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.5);
   z-index: 5;
@@ -32,12 +32,11 @@ canvas {
   display: flex;
   flex-direction: row;
   align-items: center;
-  /* justify-content: space-between; */
   position: fixed;
   padding: 8px 100px 8px 20px;
   background-color: rgba(147, 193, 252, 0.7);
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   z-index: 5;
 }
@@ -247,31 +246,30 @@ body {
   vertical-align: middle;
 }
 
-/* #person-form input[type='text'] {
-  width: 40px;
-} */
-
-
 #person-form input,
 #prompt-form input {
   margin-top: 10px;
-  /* height: 20px; */
   padding: 3px 15px;
 }
 
-.logo {
-  font-size: 42px;
+.logo,
+.about {
+  font-size: 32px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  /* font-style: italic; */
-  font-weight: 600;
+  font-weight: 500;
   color: rgb(0, 102, 235);
-  margin: 0 50px;
-  min-width: 350px;
+  margin-left: 80px;
+  cursor: pointer;
+}
 
+.logo:hover,
+.about:hover {
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.5)
 }
 
 .person {
   margin-right: 20px;
+  margin-left: 40%;
 }
 
 .imgDemo1,
@@ -279,18 +277,23 @@ body {
 .imgDemo3,
 .imgDemo4 {
   position: absolute;
-  width: 50px;
-  height: 50px;
+  border: 1px solid rgb(0, 102, 235);
+  ;
+  width: 40px;
+
+  box-sizing: border-box;
 }
 
 .imgDemo1 {
   left: 150px;
   top: 100px;
 }
+
 .imgDemo2 {
   right: 80px;
   top: 100px;
 }
+
 .imgDemo3 {
   right: 80px;
   bottom: 100px;
@@ -326,10 +329,93 @@ body {
   color: blue;
   font-size: 20px;
   text-align: center;
-  /* padding-top: 30px; */
   margin-bottom: 20px;
 }
 
 .readme input {
   padding: 3px 15px;
+}
+
+.SPAmenu {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  height: 50px;
+  position: fixed;
+  background-color: rgba(147, 193, 252, 0.7);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  z-index: 10;
+}
+
+#IPage {
+  position: fixed;
+  top: 50px;
+  height: 100vh;
+  width: 100vw;
+ background-color: rgba(202, 200, 200, 0.2);
+}
+
+.about_text {
+  margin-top: 20px;
+  padding: 10px;
+  text-indent: 15px;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  left: calc(50% - 20%);
+  width: 40%;
+  background-color: rgba(147, 193, 252, 0.2);
+  align-items: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(27, 27, 114);
+  font-size: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+}
+
+.picture1 {
+  width:18%;
+  position: fixed;
+  left: 5%;
+  top: 10%;
+  z-index: 5;
+  animation: my-animation 2s;
+  transform: translateZ(0);
+  
+}
+.picture2 {
+  width:18%;
+  position: fixed;
+  left: 5%;
+  bottom: 10%;
+  animation: my-animation 2s;
+  transform: translateZ(0);
+ }
+
+.picture3 {
+  width:18%;
+  position: fixed;
+  right: 5%;
+  bottom: 10%;
+  animation: my-animation 2s;
+  transform: translateZ(0);
+}
+.picture4 {
+  width:18%;
+  position: fixed;
+  right:  5%;
+  top: 10%;
+  animation: my-animation 2s;
+  transform: translateZ(0);
+}
+
+@keyframes my-animation {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes my-animation1 {
+  0%   { opacity: 1; }
+  100% { opacity: 1; }
 }
