--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,14 +31,17 @@ canvas {
 .divPaint {
   display: flex;
   flex-direction: row;
-  align-items: center;
   position: fixed;
-  padding: 8px 100px 8px 20px;
+  padding-left: 2%;
   background-color: rgba(147, 193, 252, 0.7);
-  width: 100%;
+  width: 100vw;
+  height: 6vh;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  border-left: 1px solid rgba(0, 0, 0, 0.5);
+  border-right: 1px solid rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   z-index: 5;
+  align-items: center;
 }
 
 .button,
@@ -61,12 +64,12 @@ canvas {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 3.1vw;
+  height: 3.1vw;
   cursor: pointer;
   align-items: center;
   box-sizing: border-box;
-  margin: 0 5px;
+  margin: 0 0.8vw
 }
 
 .catalog {
@@ -127,7 +130,7 @@ canvas {
 
 .btnImg {
   vertical-align: middle;
-  width: 35px;
+  width: 2.6vw;
 }
 
 html,
@@ -190,15 +193,15 @@ body {
 .login {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: rgb(0, 102, 235);
-  font-size: 26px;
-  margin-right: 100px;
+  font-size: 3vmin;
+ 
 }
 
 .loginWindow {
   position: absolute;
   padding: 10px;
   background-color: rgba(147, 193, 252, 0.7);
-  top: 52px;
+  top: 6vh;
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
@@ -210,10 +213,10 @@ body {
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
-  margin: 10px auto;
+  margin: 1vh auto;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: blue;
-  font-size: 20px;
+  color: rgb(0, 102, 235);
+  font-size: 2.5vmin;
   text-align: center;
 }
 
@@ -254,11 +257,11 @@ body {
 
 .logo,
 .about {
-  font-size: 32px;
+  font-size:4vmin;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
   color: rgb(0, 102, 235);
-  margin-left: 80px;
+  margin-left: 8%;
   cursor: pointer;
 }
 
@@ -268,8 +271,8 @@ body {
 }
 
 .person {
-  margin-right: 20px;
-  margin-left: 40%;
+  margin-right: 2vw;
+  margin-left: 20vw;
 }
 
 .imgDemo1,
@@ -337,10 +340,10 @@ body {
 }
 
 .SPAmenu {
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: center;
-  height: 50px;
+  height: 6vh;
   position: fixed;
   background-color: rgba(147, 193, 252, 0.7);
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -350,7 +353,7 @@ body {
 
 #IPage {
   position: fixed;
-  top: 50px;
+  top: 6vh;
   height: 100vh;
   width: 100vw;
  background-color: rgba(202, 200, 200, 0.2);
@@ -418,4 +421,8 @@ body {
 @keyframes my-animation1 {
   0%   { opacity: 1; }
   100% { opacity: 1; }
+}
+
+.templates {
+  margin-left: 15vw;
 }
