--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ canvas {
   flex-direction: column;
   align-items: center;
   position: fixed;
-  top: 118px;
+  top: 8vmax;
   background-color: rgba(147, 193, 252, 0.7);
   padding: 15px 8px;
   border-radius: 3px;
@@ -35,7 +35,7 @@ canvas {
   padding-left: 2%;
   background-color: rgba(147, 193, 252, 0.7);
   width: 100vw;
-  height: 6vh;
+  height: 4vmax;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   border-left: 1px solid rgba(0, 0, 0, 0.5);
   border-right: 1px solid rgba(0, 0, 0, 0.5);
@@ -64,8 +64,8 @@ canvas {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 3.1vw;
-  height: 3.1vw;
+  width: 3.1vmax;
+  height: 3.1vmax;
   cursor: pointer;
   align-items: center;
   box-sizing: border-box;
@@ -194,7 +194,7 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: rgb(0, 102, 235);
   font-size: 3vmin;
- 
+
 }
 
 .loginWindow {
@@ -257,7 +257,7 @@ body {
 
 .logo,
 .about {
-  font-size:4vmin;
+  font-size: 4vmin;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
   color: rgb(0, 102, 235);
@@ -343,7 +343,7 @@ body {
   width: 100vw;
   display: flex;
   align-items: center;
-  height: 6vh;
+  height: 4vmax;
   position: fixed;
   background-color: rgba(147, 193, 252, 0.7);
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -353,74 +353,86 @@ body {
 
 #IPage {
   position: fixed;
-  top: 6vh;
+  top: 4vmax;
   height: 100vh;
   width: 100vw;
- background-color: rgba(202, 200, 200, 0.2);
+  background-color: rgba(202, 200, 200, 0.2);
 }
 
 .about_text {
-  margin-top: 20px;
-  padding: 10px;
-  text-indent: 15px;
+  margin-top: 4vmax;
+  padding: 1%;
+  /* text-indent: 4%; */
   display: flex;
   flex-direction: column;
   position: fixed;
-  left: calc(50% - 20%);
-  width: 40%;
+  left: calc(50% - 25%);
+  width: 50%;
   background-color: rgba(147, 193, 252, 0.2);
   align-items: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: rgb(27, 27, 114);
-  font-size: 20px;
+  font-size: 3vmin;
   border: 1px solid rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
 }
 
 .picture1 {
-  width:18%;
+  width: 17vw;
   position: fixed;
   left: 5%;
-  top: 10%;
+  top:  8vmax;
   z-index: 5;
   animation: my-animation 2s;
   transform: translateZ(0);
-  
+
 }
+
 .picture2 {
-  width:18%;
+  width: 17vw;
   position: fixed;
   left: 5%;
-  bottom: 10%;
-  animation: my-animation 2s;
-  transform: translateZ(0);
- }
-
-.picture3 {
-  width:18%;
-  position: fixed;
-  right: 5%;
-  bottom: 10%;
+  bottom: 4vmax;
   animation: my-animation 2s;
   transform: translateZ(0);
 }
-.picture4 {
-  width:18%;
+
+.picture3 {
+  width: 17vw;
   position: fixed;
-  right:  5%;
-  top: 10%;
+  right: 5%;
+  bottom: 4vmax;
+  animation: my-animation 2s;
+  transform: translateZ(0);
+}
+
+.picture4 {
+  width: 17vw;
+  position: fixed;
+  right: 5%;
+  top: 8vmax;
   animation: my-animation 2s;
   transform: translateZ(0);
 }
 
 @keyframes my-animation {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes my-animation1 {
-  0%   { opacity: 1; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .templates {
