--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ canvas {
   position: fixed;
   top: 8vmax;
   background-color: rgba(147, 193, 252, 0.7);
-  padding: 15px 8px;
+  padding: 1vmax 0.3vmax;
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.5);
   z-index: 5;
@@ -35,7 +35,7 @@ canvas {
   padding-left: 2%;
   background-color: rgba(147, 193, 252, 0.7);
   width: 100vw;
-  height: 4vmax;
+  height: 3.5vmax;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   border-left: 1px solid rgba(0, 0, 0, 0.5);
   border-right: 1px solid rgba(0, 0, 0, 0.5);
@@ -49,12 +49,11 @@ canvas {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  font-size: 12px;
-  margin: 5px 0;
-  width: 60px;
-  height: 60px;
-  padding-top: 2px;
-  cursor: pointer;
+  font-size: 0.75vw;
+  margin: 1vh 0;
+  width: 3.8vmax;
+  height: 3.8vmax;
+   cursor: pointer;
   position: relative;
   align-items: center;
   box-sizing: border-box;
@@ -64,8 +63,8 @@ canvas {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 3.1vmax;
-  height: 3.1vmax;
+  width: 2.9vmax;
+  height: 2.9vmax;
   cursor: pointer;
   align-items: center;
   box-sizing: border-box;
@@ -73,7 +72,7 @@ canvas {
 }
 
 .catalog {
-  font-size: 14px;
+  font-size: 0.75vw;
 }
 
 .button:hover,
@@ -90,8 +89,8 @@ canvas {
   cursor: pointer;
   position: absolute;
   background-color: rgba(147, 193, 252, 0.7);
-  left: 58px;
-  top: -1px;
+  left: 3.7vmax;
+  top: 0;
   /* border: 1px solid yellow; */
   z-index: -10;
   border-radius: 3px;
@@ -108,8 +107,8 @@ canvas {
   cursor: pointer;
   position: absolute;
   background-color: rgba(147, 193, 252, 0.7);
-  left: 58px;
-  top: -12px;
+  left: 3.6vmax;
+  top: 0;
   /* border: 1px solid yellow; */
   z-index: -10;
   border-radius: 3px;
@@ -119,7 +118,7 @@ canvas {
 
 .button span {
   text-align: center;
-  line-height: 12px;
+  /* line-height: 12px; */
 }
 
 .btn_img {
@@ -130,16 +129,16 @@ canvas {
 
 .btnImg {
   vertical-align: middle;
-  width: 2.6vw;
+  width: 2.3vmax;
 }
 
-html,
+/* html,
 body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 #prompt-form {
   display: inline-block;
@@ -257,7 +256,7 @@ body {
 
 .logo,
 .about {
-  font-size: 4vmin;
+  font-size: 2.5vw;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
   color: rgb(0, 102, 235);
@@ -280,34 +279,39 @@ body {
 .imgDemo3,
 .imgDemo4 {
   position: absolute;
-  border: 1px solid rgb(0, 102, 235);
-  ;
   width: 40px;
-
-  box-sizing: border-box;
 }
 
 .imgDemo1 {
   left: 150px;
   top: 100px;
+  cursor: pointer;
 }
 
 .imgDemo2 {
   right: 80px;
   top: 100px;
+  cursor: pointer;
 }
 
 .imgDemo3 {
   right: 80px;
   bottom: 100px;
+  cursor: pointer;
 }
-
 
 .imgDemo4 {
   bottom: 100px;
   left: 150px;
+  cursor: pointer;
 }
 
+.imgDemo1:hover,
+.imgDemo2:hover,
+.imgDemo3:hover,
+.imgDemo4:hover {
+box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
 .readme {
   display: flex;
   flex-direction: column;
@@ -343,7 +347,7 @@ body {
   width: 100vw;
   display: flex;
   align-items: center;
-  height: 4vmax;
+  height: 3.5vmax;
   position: fixed;
   background-color: rgba(147, 193, 252, 0.7);
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -353,7 +357,7 @@ body {
 
 #IPage {
   position: fixed;
-  top: 4vmax;
+  top: 3.5vmax;
   height: 100vh;
   width: 100vw;
   background-color: rgba(202, 200, 200, 0.2);
@@ -385,8 +389,7 @@ body {
   z-index: 5;
   animation: my-animation 2s;
   transform: translateZ(0);
-
-}
+ }
 
 .picture2 {
   width: 17vw;
@@ -413,7 +416,9 @@ body {
   top: 8vmax;
   animation: my-animation 2s;
   transform: translateZ(0);
+
 }
+
 
 @keyframes my-animation {
   0% {
