--- a/styles/styles.css
+++ b/styles/styles.css
@@ -301,7 +301,7 @@ canvas {
 #IPage {
   position: fixed;
   top: 3.5vmax;
-  height: 100vh;
+  height: calc(100vh - 3.5vmax);
   width: 100vw;
   background-color: rgba(202, 200, 200, 0.2);
 }
